--- a/.github/workflows/freeze.yml
+++ b/.github/workflows/freeze.yml
@@ -23,4 +23,4 @@ jobs:
         run: python ./scripts/freeze-bot.py
       - name: To freeze or not to freeze
         if: steps.prcomment.TRIGGER_ACTION == 'true'
-        run: echo "Winter is coming indeed! This"
+        run: echo "Winter is coming indeed!"
