--- a/.github/workflows/freeze.yml
+++ b/.github/workflows/freeze.yml
@@ -8,19 +8,25 @@ jobs:
   refreeze:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - name: Setup
+      - name: Checkout
+        uses: actions/checkout@master
+
+      - name: Set Python
         uses: actions/setup-python@v2
         with:
           python.version: 3.8
+
       - name: Install deps
         run: |
           python -m pip install --upgrade pip ruamel.yaml
+
       - name: Monitor comments
-        id: prcomment
         with:
           BOT_PHRASE: "/winter-is-coming"
-        run: python ./scripts/freeze-bot.py
+        run: |
+          python ./scripts/freeze-bot.py
+        id: prcomment
+
       - name: To freeze or not to freeze
         if: steps.prcomment.TRIGGER_ACTION == 'true'
         run: echo "Winter is coming indeed! This"
