:ambulance: Ensure the bool is read

--- a/.github/workflows/freeze.yml
+++ b/.github/workflows/freeze.yml
@@ -28,5 +28,5 @@ jobs:
         id: prcomment
 
       - name: To freeze or not to freeze
-        if: steps.prcomment.TRIGGER_ACTION == 'true'
-        run: echo "Winter is coming indeed! This"
+        if: steps.prcomment.TRIGGER_ACTION == 'True'
+        run: echo "Winter is coming indeed! "
