:sparkles: Add username

--- a/.github/workflows/freeze.yml
+++ b/.github/workflows/freeze.yml
@@ -28,5 +28,4 @@ jobs:
         id: prcomment
 
       - name: To freeze or not to freeze
-        if: steps.prcomment.TRIGGER_ACTION == 'True'
-        run: echo "Winter is coming indeed! "
+        run: echo "Winter is coming indeed! Triggered by ${NAME}"
