:sparkles: Make env instead

--- a/.github/workflows/freeze.yml
+++ b/.github/workflows/freeze.yml
@@ -28,4 +28,4 @@ jobs:
         id: prcomment
 
       - name: To freeze or not to freeze
-        run: echo "Winter is coming indeed! Triggered by ${NAME}"
+        run: echo "Winter is coming indeed! Triggered by ${NAME} and trigger is ${TRIGGER_ACTION}"
