--- a/.github/workflows/freeze.yml
+++ b/.github/workflows/freeze.yml
@@ -39,6 +39,7 @@ jobs:
           python repo2docker/buildpacks/conda/freeze.py
 
       - name: Commit the re freezed buildpack
+        if: env.TRIGGER_ACTION == 'True'
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "jovyan bot"
