:bug: Get actual ref

--- a/.github/workflows/freeze.yml
+++ b/.github/workflows/freeze.yml
@@ -27,8 +27,9 @@ jobs:
         run: |
           python ./scripts/freeze-bot.py
           echo ${{ github.event.issue.pull_request.url }}
-          echo "::set-env name=BRANCH_NAME::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//_/g')"
-          echo "$BRANCH_NAME"
+          echo ${{ github.event.issue.pull_request.base_ref }}
+          echo ${{ github.event.issue.pull_request.head_ref }}
+
         env:
           BOT_PHRASE: "@bot please refreeze"
         id: prcomment
