--- a/.github/workflows/freeze.yml
+++ b/.github/workflows/freeze.yml
@@ -39,20 +39,20 @@ jobs:
           BOT_PHRASE: "@bot please refreeze"
         id: prcomment
 
-      # - name: To freeze or not to freeze
-      #   if: env.TRIGGER_ACTION == 'True'
-      #   run: |
-      #     echo "Re-freeze triggered by ${NAME}"
-      #     python repo2docker/buildpacks/conda/freeze.py "3.8"
+      - name: To freeze or not to freeze
+        if: env.TRIGGER_ACTION == 'True'
+        run: |
+          echo "Re-freeze triggered by ${NAME}"
+          python repo2docker/buildpacks/conda/freeze.py "3.8"
 
-      # - name: Commit the re freezed buildpack
-      #   if: env.TRIGGER_ACTION == 'True'
-      #   run: |
-      #     git config --local user.email "action@github.com"
-      #     git config --local user.name "Github actions bot"
-      #     git add ${{ github.workspace }}/repo2docker/buildpacks/conda/
-      #     git commit -m "Refreezed conda buildpack"
-      #     git push -q -f https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} ${{ github.ref }}
+      - name: Commit the re freezed buildpack
+        if: env.TRIGGER_ACTION == 'True'
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "Github actions bot"
+          git add ${{ github.workspace }}/repo2docker/buildpacks/conda/
+          git commit -m "Refreezed conda buildpack"
+          git push -q -f https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} ${{ env.BRANCH_NAME }}
 
       - name: Add comment
         if: env.TRIGGER_ACTION == 'True'
